data/derived/comb/progs/unify/prog5654.ml.out
Characters 70-74:
  | h::t -> h n + sumList(xs);;
                         ^^^^
Error: This expression has type ('a -> int) list
       but an expression was expected of type 'a
       The type variable 'a occurs inside ('a -> int) list
